style.css
body{
    background-color: #0a0116;
    color: #c4dce6;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    height: 100vh;
    padding: 0;
    margin: 0;
    font-family: 'Courier New', Courier, monospace;
}
a {
    color: #c4dce6;
}
img {
    height: 50%;
    z-index: -10;
    margin: -100px;
    -moz-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    pointer-events: none;
}
.team-members {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
}
.team-members > * {
    margin: 10px;
}
.terminal {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    padding: 10px;
}
.cursor {
    display: inline-block;
    color: #c4dce6;
    background-color: #c4dce6;
    animation: cursor 1s infinite;
}

@keyframes cursor {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

